# document_writer

./: .gitignore  hello.py  pyproject.toml
_documentation/: implementation_plan.md
_knowledge-general/: deepseek with instructor and openai client.md  openai_structured_outputs.md  scraped_content_20250123_234947.md  tavily_python_sdk_api_reference_knowledge.md  tavily_rest_api_reference_knowledge.md  tavily_search_python_sdk_guide_knowledge.md
_workproduct/: 01_initial_research_latest_news_from_ukraine_war_20250123_230701.md  01_initial_research_latest_news_from_ukraine_war_20250123_231438.md  01_initial_research_latest_news_from_ukraine_war_20250123_232210.md  01_initial_research_latest_news_fron_ukraine_war_20250123_230446.md
src/: __init__.py  document_writer.py  main.py  models.py
src/agents/: __init__.py  editor.py  judge.py
src/models/: __init__.py  article.py
src/services/: __init__.py  document.py  research.py
src/utils/: __init__.py  helpers.py
